--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,10 +5,16 @@ spring:
     url: "jdbc:mysql://localhost:3306/ecommerce"
     username: root
     password: root
+
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+  output:
+    ansi:
+      enabled: always
+
   mail:
     host: "smtp.gmail.com"
     port: 587
