--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,13 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>3.5.5</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/me.paulschwarz/spring-dotenv -->
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>4.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
