--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,25 +1,56 @@
 server:
-  port: 8080
-spring:
-  datasource:
-    url: "jdbc:mysql://localhost:3306/ecommerce"
-    username: root
-    password: root
+  port: ${API_PORT}
+  servlet:
+    context-path: ${API_PREFIX}
 
+spring:
+  main:
+    banner-mode: off
+    lazy-initialization: true
+  profiles:
+    active: dev
+  application:
+    name: ecommerce-api
+  datasource:
+    url: ${JDBC_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
-
+    show-sql: false
   output:
     ansi:
       enabled: always
-
   mail:
     host: "smtp.gmail.com"
     port: 587
-    username: "dinhtruonghioo4@gmail.com"
-    password: "lcjo kgdj zulj vzgb"
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
     properties.mail.smtp:
       auth: true
       starttls.enable: true
+
+
+logging:
+  level:
+    root: WARN
+    com.dinchan: INFO
+    org.springframework: WARN
+    org.hibernate: ERROR
+    org.apache.tomcat: ERROR
+
+payment:
+  vnPay:
+    url: ${PAY_URL}
+    tmnCode: ${TMN_CODE}
+    secretKey: ${SECRET_KEY}
+    returnUrl: ${RETURN_URL}
+    version: ${VERSION}
+    command: ${COMMAND}
+    orderType: ${ORDER_TYPE}
+
+
+
+
+
