--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,20 +1,20 @@
 server:
-  port: ${API_PORT}
+  port: 8080
   servlet:
-    context-path: ${API_PREFIX}
+    context-path: "/api/v1"
 
 spring:
-  main:
-    banner-mode: off
-    lazy-initialization: true
+#  main:
+#    banner-mode: off
+#    lazy-initialization: true
   profiles:
     active: dev
   application:
     name: ecommerce-api
   datasource:
-    url: ${JDBC_URL}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: ${JDBC_URL:jdbc:mysql://localhost:3306/ecommerce}
+    username: root
+    password: root
   jpa:
     hibernate:
       ddl-auto: update
@@ -25,30 +25,19 @@ spring:
   mail:
     host: "smtp.gmail.com"
     port: 587
-    username: ${MAIL_USERNAME}
-    password: ${MAIL_PASSWORD}
+    username: "dinhtruonghioo4@gmail.com"
+    password: "lcjokgdjzuljvzgb"
     properties.mail.smtp:
       auth: true
       starttls.enable: true
 
-
-logging:
-  level:
-    root: WARN
-    com.dinchan: INFO
-    org.springframework: WARN
-    org.hibernate: ERROR
-    org.apache.tomcat: ERROR
-
-payment:
-  vnPay:
-    url: ${PAY_URL}
-    tmnCode: ${TMN_CODE}
-    secretKey: ${SECRET_KEY}
-    returnUrl: ${RETURN_URL}
-    version: ${VERSION}
-    command: ${COMMAND}
-    orderType: ${ORDER_TYPE}
+#logging:
+#  level:
+#    root: WARN
+#    com.dinchan: INFO
+#    org.springframework: WARN
+#    org.hibernate: ERROR
+#    org.apache.tomcat: ERROR
 
 
 
